--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,35 @@
 body {
     text-align: center;
 }
+
+.start-modal {
+
+}
+
+.win-modal {
+  position: fixed;
+  background-color: rgba(0,0,0,0.5);
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 50;
+}
+
+.win-modal-content {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: #fff;
+  width: 600px;
+  max-width: 100%;
+  height: 400px;
+  max-height: 100%;
+  border-radius: 10px;
+  z-index: 100;
+}
+
+.closed {
+  visibility: hidden;
+}
