--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,25 @@
 body {
     text-align: center;
+    font-family: 'Kirang Haerang', cursive;
 }
+
+h1  {
+  font-size: 50px;
+}
+
+p {
+  font-size: 25px;
+}
+
+.scoreboard {
+  display: flex;
+  justify-content: center;
+}
+
+.scoreboard > div {
+  margin: 20px 20px 5px 20px;
+}
+
 
 .start-modal {
 
